fixed overflow message bug with overflow-wrap property

--- a/client/src/css/ChatApp.sass
+++ b/client/src/css/ChatApp.sass
@@ -42,6 +42,7 @@ $logo-text: arista, "Nunito", sans-serif
   border-radius: 2.8vh
   max-width: 45%
   margin-bottom: .2vh
+  overflow-wrap: break-word
 
 
 
@@ -360,7 +361,7 @@ $logo-text: arista, "Nunito", sans-serif
 @media screen and (max-width: 1400px)
   body
     height: 100vh
-    width: 100vh
+    width: 100vw
 
   #appGrid
     grid-template-columns: auto
